--- a/src/index.css
+++ b/src/index.css
@@ -2,16 +2,30 @@
 @tailwind components;
 @tailwind utilities;
 
+html {
+  scroll-behavior: smooth;
+}
+
 @import url("https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;500;600;700;800;900&display=swap");
 
 @layer base {
   body {
     @apply font-[Raleway];
   }
+
   li {
     @apply px-4;
     @apply cursor-pointer;
   }
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  @apply font-bold;
 }
 
 .content-div {
@@ -24,7 +38,7 @@
 .content-div:hover {
   background-image: linear-gradient(
     to right,
-    rgba(20, 22, 26, 0.8),
-    hsla(240, 33%, 15%, 0.8)
+    rgba(0, 0, 0, 1),
+    hsla(0, 0%, 0%, 1)
   ) !important;
 }
