--- a/src/index.css
+++ b/src/index.css
@@ -42,3 +42,11 @@ h6 {
     hsla(0, 0%, 0%, 1)
   ) !important;
 }
+
+.fixed {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  background-color: rgba(255, 255, 255, 1);
+}
